CSS for footer and room list & Fix layout alignment

--- a/src/public/css/components/button.css
+++ b/src/public/css/components/button.css
@@ -1,4 +1,4 @@
-form button {
+button {
   height: 2rem;
   font-size: 1rem;
   width: 50%;
@@ -10,15 +10,15 @@ form button {
   box-shadow: 2px 2px 2px black;
   transition-duration: 0.1s;
 }
-form button:hover {
+button:hover {
   cursor: pointer;
 }
-form button:active {
+button:active {
   margin-left: 1px;
   margin-top: 1px;
   box-shadow: none;
 }
-form button:disabled {
+button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
 }
