--- a/src/public/css/components/room-list.css
+++ b/src/public/css/components/room-list.css
@@ -1,11 +1,31 @@
-.room-list ul {
-  display: flex;
-}
-
 .room-list {
   display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100%;
+}
+
+.room-list__wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  border: var(--border-default);
+  border-radius: var(--border-radius);
   padding: 10px;
+  margin: 0px 10px;
+}
+
+.room-list span,
+.room-list ul {
+  display: flex;
+  width: 90%;
+  padding: 0.25em 0.5em;
+  margin: 10px;
+}
+
+.room-list span {
+  font-size: 2rem;
+  border-bottom: var(--border-default);
 }
