--- a/src/public/css/components/submit.css
+++ b/src/public/css/components/submit.css
@@ -51,7 +51,7 @@
   display: flex;
   width: 100%;
   height: 2rem;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   justify-content: center;
   align-items: center;
 }
