--- a/src/public/css/config/_variables.css
+++ b/src/public/css/config/_variables.css
@@ -1,5 +1,5 @@
 :root {
-  --logo-color: #2d8cff;
+  --logo-color: rgba(45, 140, 255, 1);
   --font-color: rgba(0, 0, 0, 0.8);
   --border-default: 2px solid rgba(0, 0, 0, 0.1);
   --border-radius: 0.6em;
